<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#d64937"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#d64937"
        android:layout_height="0dp"
        android:layout_weight="0.4">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border2"
            android:alpha="0.3"
            android:src="@drawable/forgotpassword"
            android:layout_margin="5dp"
            android:tint="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:textSize="30sp"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:weightSum="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newpass"
            android:hint="@string/newP"
            android:textColor="#000000"
            android:password="true"
            android:textSize="25sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:background="@drawable/border"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/conpass"
            android:password="true"
            android:textSize="25sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/REPASS"
            android:gravity="center"
            android:background="@drawable/border"/>

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:drawableRight="@drawable/tick"


            android:text="Done"
            android:textColor="#d64937"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>