<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#d64937"
    android:weightSum="1"
    tools:context="com.developer.aashish.userapp.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border2"
            android:layout_margin="20dp"
            android:alpha="0.4"
            android:src="@drawable/forgotpassword1"
            android:tint="#ffffff"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="#ffffff"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/confirmed"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#d64937"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/send"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#d64937"
                android:textStyle="bold"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:id="@+id/contact"
                android:text=""
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="#d64937"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/passs"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:gravity="center"
            android:maxLines="1"
            android:textStyle="bold"
            android:layout_marginLeft="35dp"
            android:background="@drawable/border"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="#d64937"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"

                android:textStyle="bold"

                android:text="@string/confrm" />

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#d64937"
                android:textSize="20sp"
android:id="@+id/cancel"
                android:textStyle="bold"
                android:layout_marginLeft="75dp"
                android:text="@string/cancel" />
        </LinearLayout>



    </LinearLayout>
</LinearLayout>